# ore-skills

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  QUICK-REFERENCE.md  README.md  main.py  pyproject.toml
.claude/agents/: researcher.md  reviewer.md  skill-builder.md
.github/: pull_request_template.md
.windsurf/workflows/: update-spec.md
docs/: architecture.md  architecture_v2.md  claude-windsurf-fusion.md  claude_code_integration.md  remote_mcp_server.md  requirements.md  research_findings.md  skill-authoring.md  skill-catalog.md  skill-catalog.toml  usage_patterns.md  windsurf_integration.md
docs/knowledge/: README.md  changelog.md  context-engineering.md  external-skills-catalog.md  prompt-patterns.md  rules-files.md  tool-integration.md  workflow-patterns.md
scripts/: check-skill-health.sh  create-skill.sh  doctor.sh  generate-skill-catalog.py  install.sh  setup-all.sh  setup-claude-code.sh  setup-windsurf.sh  uninstall.sh  update-skills.sh  validate-skills.py
servers/ore-skills-server/: main.py  pyproject.toml
servers/ore-skills-server/src/ore_skills_server/: main.py
skills/common/: pyproject.toml
skills/common/src/common/: __init__.py  llm_client.py  logger.py
skills/common/tests/: test_llm_client.py  test_logger.py
skills/context-optimizer/: SKILL.md
skills/diary/: README.md  SKILL.md  pyproject.toml
skills/diary/references/: REFERENCE.md  format.md
skills/diary/scripts/: save-diary.sh
skills/diary/src/diary/: main.py
skills/diary/tests/: test_main.py
skills/git-workflow/: SKILL.md
skills/media/: SKILL.md  pyproject.toml
skills/media/reference/: youtube.md
skills/media/src/media/: __init__.py  youtube.py
skills/media/tests/: test_youtube.py
skills/news-youtube/: README.md  SKILL.md  pyproject.toml
skills/news-youtube/references/: youtube-api.md
skills/news-youtube/src/news_youtube/: __init__.py  cli.py  parser.py  tts.py  uploader.py  video.py
skills/news-youtube/tests/: test_parser.py  test_tts.py  test_uploader.py  test_video.py
skills/obsidian-triage/: SKILL.md
skills/obsidian-utils/: README.md  SKILL.md
skills/obsidian-utils/src/obsidian_utils/: update_index.py
skills/obsidian_utils/: README.md  SKILL.md  pyproject.toml
skills/ocr-local/: README.md  SKILL.md  pyproject.toml
skills/ocr-local/references/: ocr-usage.md
skills/ocr-local/src/ocr_local/: __init__.py  __main__.py  capture.py  ocr.py
skills/ocr-local/tests/: test_capture.py  test_ocr.py
skills/pptx/: README.md  SKILL.md  pyproject.toml
skills/pptx/references/: editing.md  pptxgenjs.md
skills/pptx/scripts/: add_slide.py  pack.py  thumbnail.py  unpack.py
skills/pptx/tests/: test_scripts.py
skills/prompt-linter/: SKILL.md
skills/rules-generator/: README.md  SKILL.md  pyproject.toml
skills/rules-generator/references/: detection-rules.md  template.md
skills/rules-generator/src/rules_generator/: generator.py  main.py  scanner.py
skills/rules-generator/tests/: test_generator.py  test_scanner.py
skills/spec/: SKILL.md  pyproject.toml
skills/spec/references/: format.md
skills/spec/src/spec/: __init__.py  checker.py
skills/spec/tests/: test_checker.py
skills/task-splitter/: SKILL.md
skills/video-summary/: README.md  spec.md
skills/video-summary/scripts/: transcribe.py
skills/video_summary/: README.md  SKILL.md  pyproject.toml  spec.md
skills/video_summary/scripts/: extract_audio.py
skills/video_summary/src/video_summary/: __init__.py  extractor.py  pipeline.py  summarizer.py  transcriber.py
skills/video_summary/tests/: test_pipeline.py
skills/youtube-summary/: SKILL.md
skills/youtube-summary/src/youtube_summary/: transcribe_audio.py
skills/youtube_summary/: SKILL.md  pyproject.toml
skills/youtube_summary/src/youtube_summary/: __init__.py  cli.py  get_youtube_transcript.py
