[project]
name = "ore-skills-server"
version = "0.1.0"
description = "MCP Server for ore-skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "common",
    "spec-skills",
    "media-skills",
]

[project.scripts]
ore-skills-server = "ore_skills_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ore_skills_server"]

[tool.uv.sources]
common = { workspace = true }
spec-skills = { workspace = true }
media-skills = { workspace = true }
