[project]
name = "common"
version = "0.1.0"
description = "Common utilities for ore-skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
all = ["openai>=1.0.0", "anthropic>=0.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
