[project]
name = "media"
version = "0.1.0"
description = "Skills for media processing (YouTube, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "youtube-transcript-api>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media"]

[tool.uv.sources]
common = { workspace = true }
