[project]
name = "news-youtube"
version = "0.1.0"
description = "owlclawニュースをTTS変換しYouTubeへアップロードするスキル"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "gTTS>=2.5.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
news-youtube = "news_youtube.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_youtube"]

[tool.uv.sources]
common = { workspace = true }
