[project]
name = "ocr-local"
version = "0.2.0"
description = "ローカル Tesseract OCR でスクリーンショット画像群を Markdown に文字起こしする"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[project.optional-dependencies]
capture = [
    "playwright>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_local"]

[tool.uv.sources]
common = { workspace = true }
