[project]
name = "rules-generator"
version = "1.0.0"
description = "AI agent rules file generator (CLAUDE.md, AGENTS.md, .cursorrules)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/rules_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
