[project]
name = "spec"
version = "0.1.0"
description = "Skills for specification development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec"]

[tool.uv.sources]
common = { workspace = true }
