[project]
name = "youtube-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
youtube-summary = "youtube_summary.cli:main"
